text align of post fixed

--- a/src/pages/singleBlogpost/singleBlogpost.css
+++ b/src/pages/singleBlogpost/singleBlogpost.css
@@ -1,3 +1,3 @@
 .blogpost{
-    text-align: left;
+    text-align: left !important;
 }
